--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -9,17 +9,21 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/home_style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet"> 
 	 
 	
 
 	
 </head>
-<body>
 
+<body>
+	
 	<div id="Principal">
+		 <img src="'/img/ARREGLO.jpg'" alt="" id="Letrero">
+		 
 		<div id="central">
 			<div id="arriba">
-				<h1 id="titulo">UAQsApp</h1>
+				<p id="titulo">UAQ'sApp</p>
 			</div>
 			<div id="enmedio">
 				 <input type="checkbox" class="toggle-switch" checked >
