--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -23,10 +23,10 @@
            </div>
            <div id="ajustes">
                 
-               <div id="userPictt"><img src="img/menu.png"  id="config-web"></div>
+               <div id="userPictt" TITLE="Preferencias"><img src="img/menu.png"  id="config-web"></div>
 
            </div>
-           <div id="AddUser"><img src="img/Adduser.png" id="AddUser-img"></div>
+           <div id="AddUser" TITLE="Añadir Amigos"><img src="img/Adduser.png" id="AddUser-img"></div>
 
        </div>
         <div id="search-bar" >
@@ -40,7 +40,7 @@
 
                 
             </div>
-            <div id="IniciarConversacion">
+            <div id="IniciarConversacion" TITLE="Solicitudes">
                     <img src="img/nuevo.png" id="nuevoimg">
             </div>
 
@@ -51,6 +51,13 @@
             <div class="User_settings_Web">
                 <div id="Perfil_Image">
                     <img src="img/user.svg"  id="User_Settings_Img">
+                   
+                </div>
+                <div id="Upload">
+                        <form enctype="multipart/form-data" action="" method="POST">
+                            <input id="Upload-input"  type="file"  value="Subir Foto"/>
+                           
+                            </form> 
                 </div>
                 <div id="Datos_User">
                     <div id="User_Name_Settings">
@@ -74,7 +81,35 @@
         </div>
 
         <div id="BusquedaContactos" style="display:none"> 
-
+                <% if (data[0].idUsuarioAgregado) { %>
+                    <% for(let i = 0; i < data.length; i++) { %>
+                        <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
+                           <div id="img-in">
+                                <div id="userInPict"><img src="img/user.svg" ></div>
+                           </div>
+                           <div id="datos-in-solicitud">
+                               <div id="name-in">
+                                   <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
+                               </div>
+                               
+                           </div>
+                           <div id="aceptarorechazar">
+                               <div id="accept">
+                                    <img src="img/accept.png" id="aceptarorechazar-buttons">
+                               </div>
+                              
+                               <div id="decline">
+                                    <img src="img/Close.png" id="aceptarorechazar-buttons">
+                               </div>
+                                
+                              
+                               
+                               </div>
+                        </div>
+                    <% } %>
+                    <% } else { %>
+                        <h3>No tienes amigos agregados</h3>
+                    <% } %>
         </div>
          <div id="message-content">
             <% if (data[0].idUsuarioAgregado) { %>
@@ -130,7 +165,7 @@
                 <h1 id="title-banner">Chats</h1>
             </div>
 
-            <div class="addButton" onclick="addContact()">
+            <div class="addButton" onclick="addContact()" >
                 <img src="img/add.svg">
             </div>
         </div>
