--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -9,7 +9,8 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/home_style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">  
 	 
 	
 
@@ -19,7 +20,9 @@
 <body>
 	
 	<div id="Principal">
-		 <img src="'/img/ARREGLO.jpg'" alt="" id="Letrero">
+		
+		 <h1 id="Letrero"> Bienvenido </h1>
+		 <h2 id="subLetrero"> Welcome - Bienvenue </h2>
 		 
 		<div id="central">
 			<div id="arriba">
