--- a/chat_betas/src/assets/css/home_style.css
+++ b/chat_betas/src/assets/css/home_style.css
@@ -1377,86 +1377,89 @@
     /*Login*/
 
     #Principal{
+        border: none;
+        position: fixed;
         width: 100%;
         height: 100%;
         display: flex;
-        align-items: left;
+        align-items: center;
         justify-content: center;
+        background-image: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) ), url('../img/1.jpg');
     }
 
     #central{
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        background-color: #FAFAFA;
-        display: flex;  
+        width: 90%;
+        height: 80%;
+        background-color: #F3F3F3;
+        border-radius: 25px;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
-        flex-wrap: wrap;
-        box-shadow: 2px 3px #8888;
     }
 
     #arriba{
-        margin-top:40px;
-        height: 1%;
-        width: 20%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      
-    }
-
-    #arriba>img{
-        width: 200px;
-        height: 200px;
-    }
-
-    #titulo{
-        margin-top: 10%;
-        font-family: 'Roboto', sans-serif;
-        color: #D6D3DE;
-    }
-
-    #enmedio{        
-        margin-top: 10%;
-        height: 10%;
         width: 100%;
+        display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    #arriba>p{
+        font-size: 32px;
+    }
+
+    #enmedio{
+        width: 100%;
         display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 60px;
+        margin-bottom: 30px;
     }
 
     #abajo{
-        margin-bottom: 30%;
-        height: 30%;
-        width: 70%;
+        width: 100%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
-        text-align: center;
-        font-size: 15px;
+    }
+
+    #Letrero{
+        display: none;
+    }
+
+    #subLetrero{
+        display: none;
     }
 
     .mandar{
-        margin-top: 10%;
-        height: 35px;
-        width: 43%;
+        border: none;
+        outline: none;
+        margin-top: 30px;
+        height: 45px;
+        width: 125px;
         background-color:#30499B;
-        border-radius: 10px;
-        font-size: 15px;
+        border-radius: 25px;
+        font-size: 16px;
         color: white;
         cursor: pointer;
     }
 
+    .mandar:active{
+        background-color: #233572;
+    }
+
     .inputDatos{
-        margin-bottom:30px;
+        margin-bottom:20px;
         height: 30px;
-        width: 100%;
-        border:none;
+        width: 250px;
+        border: none;
         outline: none;
         background-color: transparent;
-        border-bottom: 1px solid black;
-        font-size: 18px;
+        border-bottom: 1px solid #707070;
+        font-size: 16px;
+        padding: 0px 5px;
     }
 
     input[type=checkbox].toggle-switch {
